--- a/src/main/resources/templates/qualification/qualification-detail.html
+++ b/src/main/resources/templates/qualification/qualification-detail.html
@@ -1,51 +1,120 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/headerSection :: headerSectionFragment}"></head>
-<body class="hold-transition sidebar-mini layout-fixed">
-<div class="wrapper"><!-- wrapper start -->
-    <nav th:replace="~{fragments/navbarSection :: navbarSectionFragment}"></nav><!-- navbar Section -->
-    <aside th:replace="~{fragments/sidebarSection :: sidebarSectionFragment}"></aside><!-- navbar Section -->
-    <div class="content-wrapper"><!-- content-wrapper Start -->
-        <section th:replace="~{fragments/contentHeader :: contentHeaderSectionFragment}"></section>
-        <!-- Form Header  Path -->
-        <section th:replace="~{fragments/smallBoxSection :: smallBoxSectionFragment}"></section><!-- Small Box Set -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<head th:replace="~{fragments/header :: headerFragment}" >
+  <meta charset="UTF-8" >
+  <title >Thymeleaf Springboot </title >
+</head >
+<body >
+<nav th:replace="~{fragments/navBar :: navBarFragment}" ></nav >
+<div class="container-fluid" >
+  <div class="row" >
+    <div class="col-md-12" >
+      <div class="row" >
 
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <h4>Qualification </h4>
-                                <div class="container-fluid" th:fragment="qualificationDetail">
-                                    <table class="table table-hover table-borderless">
-                                        <tbody>
-                                        <tr><th>
-                                            <label class="form-label "> Id </label></th>
-                                       <td>
-                                            <p class="display_detail" th:text="${qualificationDetail.id}"></p>
-                                       </td></tr>
+        <div class="col-md-12" >
+          <div class="card" >
+            <div class="card-body" >
+              <h4 >Qualification </h4 >
+              <div class="container-fluid" th:fragment="qualificationDetail" >
+                <table class="table table-hover table-borderless" >
+                  <tbody >
+                  <tr >
+                    <th >
+                      <label class="form-label " > Id </label ></th >
+                    <td >
+                      <p class="display_detail" th:text="${qualificationDetail.id}" ></p >
+                    </td >
+                  </tr >
 
-                                    <tr><th>
-                                        <label class="form-label "> Name </label></th>
+                  <tr >
+                    <th >
+                      <label class="form-label " > Name </label ></th >
 
-                                         <td> <p class="display_detail" th:text="${qualificationDetail.name}"></p>
-                                         </td></tr></tbody></table>
-                            </div>
+                    <td ><p class="display_detail" th:text="${qualificationDetail.name}" ></p >
+                    </td >
+                  </tr >
+                  </tbody >
+                </table >
+              </div >
 
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div><!-- content-wrapper end -->
-<footer th:replace="~{fragments/footerSection :: footerSectionFragment}"></footer><!-- footer Section -->
-</div><!-- wrapper end -->
-<script th:replace="~{fragments/scriptSection :: scriptSectionFragment}"></script><!-- script Fragment -->
-</body>
-</html>
+            </div >
+          </div >
+        </div >
+      </div >
+    </div >
+    <div class="container-fluid formBorder text-center" >
+      <div class="col" >
+        <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}" >
+          <table class="table table-hover table-striped" id="myTable" >
+            <thead >
+            <tr >
+              <th > Index</th >
+              <th > Image</th >
+              <th > Employee Id</th >
+              <th > Name</th >
+              <th > Mobile</th >
+              <th > Designation</th >
+              <th > Status</th >
+              <th > Modify</th >
+            </tr >
+            </thead >
+            <tbody >
+            <tr th:each="employee, rowCount : ${employees}" >
+              <th th:text="${rowCount.count}" ></th >
+              <th >
+                <div class="image" data-th-if="${employee.fileInfo !=null}" >
+                  <img id="img" class="rounded"
+                       style="height:50px; width:50px;border-radius: 1px"
+                       alt="Employee images"
+                       data-th-src="${employee.fileInfo.url}" />
+                </div >
+              </th >
+              <th th:text="${employee.code}" ></th >
+              <th th:text="${employee.callingName}" ></th >
+              <th th:text="${employee.mobileOne}" ></th >
+              <th th:text="${employee.designation.designation}" ></th >
+              <th th:text="${employee.employeeStatus.employeeStatus}" ></th >
+              <th >
+                <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm" >&nbsp;View</a >
+                <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm" ><i
+                      class="fa fa-edit" ></i >&nbsp;Edit</a >
+                <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"
+                   th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm" ><i
+                      class="fa fa-trash" ></i >
+                  Delete</a >
+              </th >
+            </tr >
+            </tbody >
+          </table >
+        </div >
+      </div >
+      <div class="row" th:if="${ #lists.isEmpty(employees)}" >
+        <div class="col-sm-12" >
+          <div class="alert alert-warning alert-dismissible fade show" role="alert" >
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
+              <span aria-hidden="true" >&times;</span >
+            </button >
+            <h3 class="text-center text-danger" >
+              <strong >There is no employee upto now please add employee to the system
+                       using add user button.
+              </strong >
+            </h3 >
+          </div >
+        </div >
+        <script >
+            /*active boostrap alert - start*/
+            $(".alert").alert();
+            /*active boostrap alert - end*/
+        </script >
+      </div >
+    </div >
+  </div >
+</div >
+<!--footer include-->
+<footer th:replace="~{fragments/footer :: footerFragment}" ></footer >
+<!--script include-->
+<script th:replace="~{fragments/script :: scriptFragment}" ></script >
+
+</body >
+</html >
